various edits to make it running

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,3 +6,20 @@ manifest {
 	nextflowVersion = ">=22.10.6"
 	version = "0.7"
 }
+
+process {
+    withName recognise_genome {
+        publishDir = [ path: params.output_dir, mode: "copy" ]
+        container = "ghcr.io/cschu/recognise:main"
+    }
+}
+
+params {
+    output_dir = null
+    input_dir = null
+
+}
+
+docker {
+    enabled = true
+}
