--- a/nextflow.config
+++ b/nextflow.config
@@ -10,14 +10,14 @@ manifest {
 process {
     withName recognise_genome {
         publishDir = [ path: params.output_dir, mode: "copy" ]
-        container = "ghcr.io/cschu/recognise:main"
+        container = "ghcr.io/grp-bork/recognise:main"
     }
 }
 
 params {
     output_dir = null
     input_dir = null
-
+    marker_db = null
 }
 
 docker {
