--- a/nextflow.config
+++ b/nextflow.config
@@ -8,7 +8,7 @@ manifest {
 }
 
 process {
-    withName recognise_genome {
+    withName: recognise_genome {
         publishDir = [ path: params.output_dir, mode: "copy" ]
         container = "ghcr.io/grp-bork/recognise:main"
     }
