--- a/nextflow.config
+++ b/nextflow.config
@@ -9,7 +9,8 @@ manifest {
 
 process {
     withName: recognise_genome {        
-        container = "ghcr.io/grp-bork/recognise:main"
+        // container = "ghcr.io/grp-bork/recognise:main"
+        container = "registry.git.embl.de/schudoma/recognise-docker:latest"
     }
 }
 
