--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
 manifest {
 	author = "Christian Schudoma, Daniel Podlesny, Anthony Fullam, Askarbek Orakov, Sebastian Schmidt"
 	defaultBranch = "main"
-	description = "Pipeline for assigning specI cluster to input genomes using COG marker genes"
+	description = "Pipeline for species-assignment (specI cluster) of microbial genomes using COG marker genes"
 	name = "reCOGnise"
 	nextflowVersion = ">=22.10.6"
 	version = "0.7"
